--- a/src/pages/NotFound/style.css
+++ b/src/pages/NotFound/style.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: '15vh'
+  margin-top: 15vh
 }
 
 .img {
@@ -15,3 +15,4 @@
 }
 
 
+         
